---
source: tests/ast_tests.rs
assertion_line: 24
expression: "AST::parse(tokens)"
---
AST(
    Expression {
        span: Span {
            start: 0,
            end: 12,
        },
        expresssion: [
            MemberExpression {
                span: Span {
                    start: 0,
                    end: 10,
                },
                object: Identifier {
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                    value: String(
                        "$",
                    ),
                },
                property: MemberExpression {
                    span: Span {
                        start: 2,
                        end: 10,
                    },
                    object: Identifier {
                        span: Span {
                            start: 2,
                            end: 3,
                        },
                        value: String(
                            "a",
                        ),
                    },
                    property: Identifier {
                        span: Span {
                            start: 5,
                            end: 10,
                        },
                        value: String(
                            "as\"d",
                        ),
                    },
                },
            },
        ],
    },
)
